@@ -11,6 +11,7 @@
 "tog-highlightbroken" => "Brug røde henvisninger til tomme sider",
 "tog-justify"	=> "Justér afsnit",
 "tog-hideminor" => "Skjul mindre ændringer i seneste ændringer listen",
+"tog-extendwatchlist" => "Udvidet liste med seneste ændringer",
 "tog-usenewrc" => "Udvidet seneste ændringer liste<br />(ikke for alle browsere)",
 "tog-numberheadings" => "Automatisk nummerering af overskrifter",
 "tog-showtoolbar" => "Vis værktøjslinje til redigering",
@@ -539,6 +540,7 @@ for at ændre brugerindstillinger.",
 'prefs-personal' => 'Brugerdata',
 'prefs-rc' => 'Seneste ændringer og artikelstumper',
 'prefs-misc' => 'Forskelligt',
+'prefs-watchlist-edits' => 'Antal redigeringer der vises i udvidet overvågningsliste:',
 "saveprefs"		=> "Gem indstillinger",
 "resetprefs"	=> "Gendan indstillinger",
 "oldpassword"	=> "Gammel adgangskode",
